--- a/reactabsensirsudsamratadmin/src/App.css
+++ b/reactabsensirsudsamratadmin/src/App.css
@@ -1,38 +1,489 @@
 .App {
-  text-align: center;
+  display: flex;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.main-body {
+  flex-grow: 1;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: #fafafa;
+}
+
+/* src/LeftSide.css */
+.left-side {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 1rem;
+  width: 315px;
+  min-height: 100vh;
+  background-color: #fafafa;
+}
+
+.logo {
+  max-width: 70%;
+  margin: 40px 0 60px 30px;
+}
+
+.button-change-color {
+  cursor: pointer;
+  background: none;
+  border: none;
+  color: #9a9a9a;
+  font-size: 16px;
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
+  gap: 1rem;
+}
+
+.button-change-color:hover {
+  background-color: none;
+}
+
+.clicked {
+  color: #01a7a3;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.img-clicked {
+  filter: invert(37%) sepia(100%) saturate(1618%) hue-rotate(152deg)
+    brightness(98%) contrast(99%);
+}
+
+/* src/Header.css */
+.header {
+  color: #ffffff;
+  height: 158px;
+  padding-left: 30px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-size: cover;
 }
 
-.App-link {
-  color: #61dafb;
+.name {
+  font-size: 32px;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.current-date {
+  font-size: 20px;
+}
+
+/* src/Search.css */
+.search {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.buttonSearch-container {
+  display: flex;
+  margin-top: 10px;
+  gap: 14px;
+}
+
+.buttonSearch-element {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #ffffff;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.buttonSearch-element:hover {
+  background-color: none;
+}
+
+.clicked-buttonSearch {
+  color: #ffffff;
+  background-color: #01a7a3;
+}
+
+.CreateAccount-buttonTableEdit {
+  text-align: center;
+  border: 1px solid;
+  border-radius: 10px;
+  background-color: #ffffff;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.buttonTable {
+  text-align: center;
+  border: 1px solid;
+  border-radius: 10px;
+  background-color: #01a7a3;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 0.8rem 1.5rem;
+  color: #ffffff;
+}
+
+.CreateAccount-buttonTableTrash {
+  text-align: center;
+  border: 1px solid;
+  border-radius: 10px;
+  background-color: #ffffff;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+}
+
+.CreateAccount-buttonTableEdit img {
+  height: 2rem;
+  width: 2rem;
+  filter: invert(37%) sepia(100%) saturate(1618%) hue-rotate(152deg)
+    brightness(98%) contrast(99%);
+}
+
+.CreateAccount-tableAction img {
+  height: 2rem;
+  width: 2rem;
+}
+
+.search-bar {
+  flex-grow: 1;
+  padding: 10px;
+  margin-top: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  background-image: url("./img/magnifying-glass.png"); /* Replace 'path/to/your/image.png' with the actual image path */
+  background-repeat: no-repeat;
+  background-position: 1rem, left;
+  padding-left: 3rem;
+  border-radius: 12px;
+}
+
+.search-bar::placeholder {
+  padding-left: 0.1rem;
+}
+
+/* src/TableComponent.css */
+
+.table-container {
+  padding: 2rem;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.table th,
+.table td {
+  border: none;
+  padding: 8px;
+  text-align: left;
+  background-color: #ffffff;
+}
+
+.table th {
+  background-color: transparent;
+  border: none;
+}
+
+.table td:nth-child(1),
+.table th:nth-child(1) {
+  width: 3%;
+}
+
+.table td:nth-child(2),
+.table th:nth-child(2) {
+  width: 15%;
+  text-align: left;
+}
+
+.table td:nth-child(3),
+.table th:nth-child(3) {
+  width: 10%;
+}
+
+.table td:nth-child(4),
+.table th:nth-child(4) {
+  width: 15%;
+}
+
+.table td:nth-child(5),
+.table th:nth-child(5) {
+  width: 15%;
+}
+
+.table td:nth-child(6),
+.table th:nth-child(6) {
+  width: 15%;
+}
+
+.table th:nth-child(7),
+.table td:nth-child(7) {
+  width: 15%;
+  text-align: center;
+}
+
+.table th:last-child,
+.table th:last-child {
+  width: 15%;
+  text-align: center;
+}
+
+/* src/CreateAkun.css */
+
+.CreateAccount-mainContainer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  gap: 14px;
+  padding: 2rem;
+}
+
+.CreateAccount {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.CreateAccount p {
+  color: #01a7a3;
+}
+
+.CreateAccount-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.CreateAccount-search-bar {
+  flex-grow: 1;
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  background-image: url("./img/magnifying-glass.png"); /* Replace 'path/to/your/image.png' with the actual image path */
+  background-repeat: no-repeat;
+  background-position: 1rem, left;
+  padding-left: 3rem;
+  border-radius: 12px;
+}
+
+.CreateAccount-search-bar::placeholder {
+  padding-left: 0.1rem;
+}
+
+/* src/CreateAkunTable.css */
+
+.CreateAccount-button button {
+  background: none;
+  border: none;
+}
+
+/* src/CreateAkunTable.css */
+
+.CreateAccount-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.CreateAccount-table th,
+.CreateAccount-table td {
+  border: none;
+  padding: 8px;
+  text-align: left;
+  background-color: #ffffff;
+}
+
+.CreateAccount-table th {
+  background-color: transparent;
+  border: none;
+}
+
+.CreateAccount-table td:nth-child(1),
+.CreateAccount-table th:nth-child(1) {
+  width: 3%;
+}
+
+.CreateAccount-table td:nth-child(2),
+.CreateAccount-table th:nth-child(2) {
+  width: 15%;
+  text-align: left;
+}
+
+.CreateAccount-table td:nth-child(3),
+.CreateAccount-table th:nth-child(3) {
+  width: 10%;
+}
+
+.CreateAccount-table td:nth-child(4),
+.CreateAccount-table th:nth-child(4) {
+  width: 15%;
+}
+
+.CreateAccount-table td:nth-child(5),
+.CreateAccount-table th:nth-child(5) {
+  width: 15%;
+}
+
+.CreateAccount-table td:last-child,
+.CreateAccount-table th:last-child {
+  width: 15%;
+  text-align: center;
+}
+
+/* src/AccountModal.css */
+body.active-modal {
+  overflow-y: hidden;
+}
+
+.btn-modal {
+  padding: 10px 20px;
+  display: block;
+  margin: 100px auto 0;
+  font-size: 18px;
+}
+
+.modal,
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+}
+
+.overlay {
+  background: rgba(49, 49, 49, 0.8);
+}
+
+.modal-content {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  line-height: 1.4;
+  background: #f1f1f1;
+  border-radius: 3px;
+  display: flex;
+  padding: 2rem;
+  margin: 0.5rem;
+  gap: 7rem;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 25rem;
+  min-width: 25rem;
+  background-color: #fafafa;
+  background-image: url("./img/Modal-Background.png");
+  background-size: cover;
+  padding-bottom: 2.5rem;
+}
+
+.close-modal {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 7px;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 1rem;
+  margin-bottom: 10rem;
+}
+
+.input-container input {
+  flex-grow: 1;
+  width: 15rem;
+  padding-left: 2px;
+  padding: 0.4rem;
+  background-color: transparent;
+  border: 0.1px solid black; /* Adjust the border thickness as needed */
+  border-radius: 10px;
+  padding-left: 1rem;
+}
+
+/* .input-container input::placeholder {
+  padding-left: 1rem;
+} */
+
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.CreateAccount-profile-picture {
+  width: 8.5rem;
+  height: 9.5rem;
+}
+
+.picture-and-upload-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.picture-and-upload-container button {
+  background: none;
+  border: none;
+}
+
+.CreateAccount-upload-logo {
+  width: 2rem;
+  height: 2rem;
+  padding: 0.4rem;
+  background-color: #00afef;
+  border-radius: 50px;
+}
+
+.CreateAccount-create-button {
+  padding: 0.7rem 3.5rem;
+  background-color: #01a7a3;
+  color: #ffffff;
+  border: none;
+  border-radius: 7px;
+}
+
+.CreateAccount-password {
+  display: flex;
+  align-items: center;
+}
+
+.CreateAccount-password input {
+  background-color: transparent;
+  border: 0.1px solid black; /* Adjust the border thickness as needed */
+  border-radius: 10px;
+}
+
+.CreateAccount-password button {
+  background: none;
+  border: none;
+  transform: translateX(-100%);
 }
